GH-103 - Upgrade to Spring Framework 7.0 M2.